# final-year-project

./: .gitignore  README.md  requirements.txt
catkin_ws/: .gitignore
catkin_ws/src/mums_assistant/config/: joint_names_mums_assistant.yaml
catkin_ws/src/mums_assistant/launch/: display.launch  gazebo.launch  test.launch
catkin_ws/src/mums_assistant/meshes/: gripper_link_1.STL  gripper_link_2.STL  link_1.STL  link_2.STL  link_5.STL
src/mums_assistant/: CMakeLists.txt  package.xml
src/mums_assistant/config/rviz/: saved_config.rviz
src/mums_assistant/config/scene/: kitchen.scene  kitchen_and_tools.scene
src/mums_assistant/launch/: gazebo.launch  test.launch
src/mums_assistant/meshes/: base_link.STL  gripper_link_1.STL  gripper_link_2.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL
src/mums_assistant/msg/: Dofs.msg
src/mums_assistant/script/: arduino_sketch_PCA.ino  arduino_subcriber.ino  inp.py  joint_servo_publisher_test.py  joint_servo_publisher_test2.py  joint_servo_subscriber_test.py  joint_state_pub_servo.py  joint_state_subscriber.cpp  mixing_bowl.py  pick_place_cube.py  testcode.py  testcode2.py
src/mums_assistant/script/joint_state_listener/: joint_state_listener.ino
src/mums_assistant/urdf/: mums_assistant.csv  mums_assistant.urdf
src/mums_assistant_config/: .setup_assistant  CMakeLists.txt  package.xml
src/mums_assistant_config/config/: controllers.yaml  fake_controllers.yaml  mums_assistant.srdf  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
src/mums_assistant_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
src/mums_assistant_config/worlds/: bowl.world  kitchen.world  kitchen3.world  kitchen_w_collision.world  kitchen_with_col.world  mums_assistant.world  my_world.world  my_world2.world  nakli.world  nakli_copy.world  nakli_v2.world  nakli_v3.world  spoon_wala.world  test.world
src/mums_assistant_gazebo/: CMakeLists.txt  package.xml
src/ros_lib/gazebo_grasp_plugin_ros/: GazeboGraspEvent.h
src/ros_lib/gazebo_test_tools/: RecognizeGazeboObject.h
src/ros_lib/moveit_msgs/: GetCartesianPath.h  GetMotionPlan.h  GetPositionFK.h  GetPositionIK.h  GetStateValidity.h  GraspPlanning.h
src/ros_lib/mums_assistant/: Dofs.h
src/ros_lib/object_msgs/: Object.h  ObjectInfo.h  ObjectPose.h  RegisterObject.h
ws_moveit/src/: .rosinstall.bak
(+41 files in other folders)
